--- a/Lab1-babypython.ipynb
+++ b/Lab1-babypython.ipynb
@@ -1068,13 +1068,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#your code here"
+    "mydict = {a:a**3 for a in range(1,10)}"
    ]
   },
   {
